compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__logical_op_and.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Compatibility with booleans\n    var b : boolean\n    var _bb := b and b\n"

---
"b"@(FileId(1), 43..44) [Declared]: ref_mut boolean
"_bb"@(FileId(1), 63..66) [Declared]: ref_mut boolean
"<root>"@(dummy) [Declared]: <error>

