compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__logical_op_imply.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Compatibility with booleans\n    var b : boolean\n    var _bb := b => b\n"
---
"b"@(FileId(1), 43..44) [ConstVar(Var, No)]: boolean
"_bb"@(FileId(1), 63..66) [ConstVar(Var, No)]: boolean
"<root>"@(dummy) [Module(No)]: <error>

