compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__logical_op_not.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Compatibility with booleans\n    var b : boolean\n    var _b := not b\n"

---
"b"@(FileId(1), 43..44) [Declared]: ref_mut boolean
"_b"@(FileId(1), 63..65) [Declared]: ref_mut boolean
"<root>"@(dummy) [Declared]: <error>

