compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__logical_op_or.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Compatibility with booleans\n    var b : boolean\n    var _bb := b or b\n"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(0))) TyRef(Boolean)
def_kinds:
    DefId(0) Var(TyRef(Boolean))
    DefId(1) Var(TyRef(Boolean))
